--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
@@ -15,7 +17,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^4.15.0"
+    "prisma": "^4.15.0",
+    "tsup": "^6.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
