--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "build": "tsup src",
+    "uploads": "mkdir uploads",
     "start": "node dist/server.js"
   },
   "dependencies": {
