--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-imask": "^6.6.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
